WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196024
REGRESSION: Flaky ASSERTION FAILED: !m_killed seen with http/tests/security/cross-origin-worker-indexeddb.html
https://bugs.webkit.org/show_bug.cgi?id=196024
Summary
REGRESSION: Flaky ASSERTION FAILED: !m_killed seen with http/tests/security/c...
Truitt Savell
Reported
2019-03-20 12:42:04 PDT
The following layout test is failing on Debug http/tests/security/cross-origin-worker-indexeddb.html Probable cause: Unknown, this test started crashing around 242912~ and is popping up in EWS often as a false positive. It is not reproducing locally at all. The crash logs are listed as invalid as well. Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fsecurity%2Fcross-origin-worker-indexeddb.html
Crash:
https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK1%20(Tests)/r243203%20(2675)/http/tests/security/cross-origin-worker-indexeddb-crash-log.txt
Attachments
crash log
(112.72 KB, text/plain)
2019-03-20 13:17 PDT
,
Ryan Haddad
no flags
Details
Patch
(1.82 KB, patch)
2019-03-21 12:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(1.82 KB, patch)
2019-03-21 12:15 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2019-03-20 13:17:37 PDT
Created
attachment 365385
[details]
crash log
Ryan Haddad
Comment 2
2019-03-20 13:17:56 PDT
ASSERTION FAILED: !m_killed /Volumes/Data/EWS/WebKit/WebKitBuild/Debug/usr/local/include/wtf/CrossThreadQueue.h(64) : void WTF::CrossThreadQueue<WTF::CrossThreadTask>::append(DataType &&) [DataType = WTF::CrossThreadTask] 1 0x106f61fa9 WTFCrash 2 0x1158c53ab WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1170f748a WTF::CrossThreadQueue<WTF::CrossThreadTask>::append(WTF::CrossThreadTask&&) 4 0x1171ba536 WebCore::IDBServer::UniqueIDBDatabase::postDatabaseTask(WTF::CrossThreadTask&&) 5 0x1171f6a4b auto WebCore::IDBServer::UniqueIDBDatabase::performCurrentOpenOperation()::$_2::operator()<WebCore::StorageQuotaManager::Decision>(WebCore::StorageQuotaManager::Decision) 6 0x1171f67fa WTF::Function<void (WebCore::StorageQuotaManager::Decision)>::CallableWrapper<WebCore::IDBServer::UniqueIDBDatabase::performCurrentOpenOperation()::$_2>::call(WebCore::StorageQuotaManager::Decision) 7 0x1171309c3 WTF::Function<void (WebCore::StorageQuotaManager::Decision)>::operator()(WebCore::StorageQuotaManager::Decision) const 8 0x1170e6741 WTF::CompletionHandler<void (WebCore::StorageQuotaManager::Decision)>::operator()(WebCore::StorageQuotaManager::Decision) 9 0x11934fbf6 WebCore::StorageQuotaManager::processPendingRequests(WTF::Optional<unsigned long long>) 10 0x119354bdd WebCore::StorageQuotaManager::addUser(WebCore::StorageQuotaUser&)::$_0::operator()() const 11 0x1193549d9 WTF::Function<void ()>::CallableWrapper<WebCore::StorageQuotaManager::addUser(WebCore::StorageQuotaUser&)::$_0>::call() 12 0x1158c686d WTF::Function<void ()>::operator()() const 13 0x116fa95e0 WTF::CompletionHandler<void ()>::operator()() 14 0x1170e5e47 WebCore::IDBServer::IDBServer::QuotaUser::initializeSpaceUsed(unsigned long long) 15 0x1170e65ad WebCore::IDBServer::IDBServer::finishComputingSpaceUsedForOrigin(WebCore::ClientOrigin const&, unsigned long long) 16 0x117130800 void WTF::callMemberFunctionForCrossThreadTaskImpl<WebCore::IDBServer::IDBServer, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), std::__1::tuple<WebCore::ClientOrigin, unsigned long long>, 0ul, 1ul>(WebCore::IDBServer::IDBServer*, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), std::__1::tuple<WebCore::ClientOrigin, unsigned long long>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) 17 0x117130710 void WTF::callMemberFunctionForCrossThreadTask<WebCore::IDBServer::IDBServer, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), std::__1::tuple<WebCore::ClientOrigin, unsigned long long>, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(WebCore::IDBServer::IDBServer*, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), std::__1::tuple<WebCore::ClientOrigin, unsigned long long>&&) 18 0x1171306a4 WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::IDBServer, 0, WebCore::ClientOrigin const&, unsigned long long, WebCore::ClientOrigin, unsigned long long>(WebCore::IDBServer::IDBServer&, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), WebCore::ClientOrigin const&, unsigned long long const&)::'lambda'()::operator()() 19 0x1171304d9 WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTask WTF::createCrossThreadTask<WebCore::IDBServer::IDBServer, 0, WebCore::ClientOrigin const&, unsigned long long, WebCore::ClientOrigin, unsigned long long>(WebCore::IDBServer::IDBServer&, void (WebCore::IDBServer::IDBServer::*)(WebCore::ClientOrigin const&, unsigned long long), WebCore::ClientOrigin const&, unsigned long long const&)::'lambda'()>::call() 20 0x106f8c46d WTF::Function<void ()>::operator()() const 21 0x106f8ba65 WTF::CrossThreadTask::performTask() 22 0x106f8bb0d WTF::CrossThreadTaskHandler::handleTaskRepliesOnMainThread() 23 0x106f8d6f8 WTF::CrossThreadTaskHandler::postTaskReply(WTF::CrossThreadTask&&)::$_1::operator()() const 24 0x106f8d6b9 WTF::Function<void ()>::CallableWrapper<WTF::CrossThreadTaskHandler::postTaskReply(WTF::CrossThreadTask&&)::$_1>::call() 25 0x106f8c46d WTF::Function<void ()>::operator()() const 26 0x106fbfadd WTF::dispatchFunctionsFromMainThread() 27 0x106fc28c5 -[JSWTFMainThreadCaller call] 28 0x7fff53fa32b5 __NSThreadPerformPerform 29 0x7fff51e62d31 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 30 0x7fff51f1a60c __CFRunLoopDoSource0 31 0x7fff51e45d3c __CFRunLoopDoSources0
Radar WebKit Bug Importer
Comment 3
2019-03-21 11:56:12 PDT
<
rdar://problem/49117272
>
youenn fablet
Comment 4
2019-03-21 12:00:46 PDT
Created
attachment 365582
[details]
Patch
youenn fablet
Comment 5
2019-03-21 12:15:45 PDT
Created
attachment 365587
[details]
Patch
WebKit Commit Bot
Comment 6
2019-03-22 15:12:38 PDT
Comment on
attachment 365587
[details]
Patch Clearing flags on attachment: 365587 Committed
r243402
: <
https://trac.webkit.org/changeset/243402
>
WebKit Commit Bot
Comment 7
2019-03-22 15:12:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug