REGRESSION: Flaky ASSERTION FAILED: !m_killed seen with http/tests/security/cross-origin-worker-indexeddb.html https://bugs.webkit.org/show_bug.cgi?id=196024 <rdar://problem/49117272>

Reviewed by Alexey Proskuryakov.

Do not proceed with opening the database if it is being closed.
Speculative fix, this should stop making test crashing on bots.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performCurrentOpenOperation):


Canonical link: https://commits.webkit.org/210459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243402 268f45cc-cd09-0410-ab3c-d52691b4dbfc